# tickflow-stock-panel

./: .env.example  Dockerfile  README.md  docker-compose.yml  tiers.yaml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py  secrets_store.py
backend/app/api/: crypto.py  overview.py  routes.py
backend/app/jobs/: daily_pipeline.py
backend/app/services/: free_market_data.py  index_sync.py  instrument_sync.py  kline_sync.py  longbridge_market_data.py  okx_market_data.py  quote_service.py  watchlist.py
backend/app/tickflow/: client.py  policy.py  pools.py  repository.py
frontend/: index.html
frontend/src/components/: EndpointTestDialog.tsx  Layout.tsx  Logo.tsx  PageHeader.tsx  SealedBadge.tsx  StockIntradayChart.tsx
frontend/src/components/data/: DepthConfigCard.tsx  ExtendHistoryPanel.tsx  MinuteSyncConfig.tsx  StatCard.tsx
frontend/src/lib/: api.ts  capability-labels.tsx  queryKeys.ts  watchlist-columns.ts
frontend/src/pages/: Branding.tsx  Dashboard.tsx  Data.tsx  Dev.tsx  Financials.tsx  Onboarding.tsx  Settings.tsx
frontend/src/pages/backtest/: StrategyBacktest.tsx
frontend/src/pages/settings/: AI.tsx  Keys.tsx  Monitoring.tsx  System.tsx
