[project]
name = "tickflow-stock-panel-backend"
version = "0.1.31"
description = "A 股选股 + 监控 + 回测面板"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.6",
    "sse-starlette>=2.0",
    # Data
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "pandas>=2.2",                # 仅在 BacktestService 边界使用,见 §7.4 / ADR-19
    "fastexcel>=0.10",            # Polars 读取 xlsx/xls
    # 默认数据源 SDK
    "tickflow[all]>=0.1.23",
    # Scheduling
    "apscheduler>=3.10",
    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # AI(可选,但默认装上)
    "openai>=1.40",               # OpenAI 兼容适配器复用 openai SDK
    "httpx>=0.27",
    "longbridge>=4.3.2",
]

[project.optional-dependencies]
# 回测依赖 vectorbt → numba → llvmlite,体积大且 macOS/Intel 上无预构建 wheel 时
# 需要 brew install cmake 现场编译。挪到可选 extras,主依赖瘦身。
# 启用:`uv sync --extra backtest`
backtest = [
    "vectorbt>=0.26",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]   # 长行交给 fmt

[tool.pytest.ini_options]
asyncio_mode = "auto"
